# FactoryPlanningTools

./: .gitignore  CMakeLists.txt  READMe.md
include/: generator_data.h  generator_data_legacy.h  generator_data_v2.h  llm_selector.h  problem_data.h  scorer.h  solution_checker.h  solver.h  task_profile.h  tool.h  work.h
scripts/: build_sft_dataset.py  merge_lora_adapter.py  summarize_results.py  train_lora_selector.py  visualize_solution.py
src/: main.cpp
tests/: test_main.cpp
